--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Emerald Isle Jewelry {% block extra_title %}{% endblock %}</title>
+    <title>Boutique Ado {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top"></header>
