--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,117 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-    <h1 class="display-4 text-success">It works!</h1>
+
+<!-- Hero Section -->
+<section class="jumbotron">
+    <div class="container text-center">
+      <h1>Emerald Isle Jewelry</h1>
+      <p>Made with love in Ireland</p>
+      <a class="btn btn-primary" href="#" role="button">Shop Now</a>
+    </div>
+  </section>
+
+  <!-- Catergories -->
+<section class="container my-5">
+    <h2 class="text-center">Product Categories</h2>
+    <div class="row">
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Category Name</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Category Name</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Category Name</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Category Name</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+  <!-- Featured Products -->
+  <section class="container my-5">
+    <h2 class="text-center">Featured Products</h2>
+    <div class="row">
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Featured Products</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Featured Products</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Featured Products</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <div class="card-body">
+            <h5 class="card-title">Featured Products</h5>
+            <p class="card-text">Description of the category.</p>
+            <a href="#" class="btn btn-primary">View Products</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
