Add images to files, start readme

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,12 @@
 
 <!-- Hero Section -->
 <section class="jumbotron">
-    <div class="container text-center">
+  <div class="container text-center">
       <h1>Emerald Isle Jewelry</h1>
       <p>Made with love in Ireland</p>
       <a class="btn btn-primary" href="#" role="button">Shop Now</a>
-    </div>
-  </section>
+  </div>
+</section>
 
   <!-- Catergories -->
 <section class="container my-5">
@@ -36,10 +36,10 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <img src="/media/Mens_Silver_Claddagh_Ring_large.jpg" class="card-img-top" alt="Claddagh Ring Catergory">
           <div class="card-body">
-            <h5 class="card-title">Category Name</h5>
-            <p class="card-text">Description of the category.</p>
+            <h5 class="card-title">Claddagh Ring</h5>
+            <p class="card-text">All Claddagh Rings</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
         </div>
