--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,50 +21,32 @@
 </section>
 
   <!-- Catergories -->
-<section class="container my-5">
-    <h2 class="text-center">Product Categories</h2>
-    <div class="row">
-      <div class="col-lg-3 col-md-6">
-        <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
-          <div class="card-body">
-            <h5 class="card-title">Category Name</h5>
-            <p class="card-text">Description of the category.</p>
-            <a href="#" class="btn btn-primary">View Products</a>
+    <!-- Categories -->
+    <section class="container my-5">
+      <h2 class="text-center">Product Categories</h2>
+      <div class="row">
+          <div class="col-lg-3 col-md-6">
+              <div class="card">
+                  <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+                  <div class="card-body">
+                      <h5 class="card-title">Category Name</h5>
+                      <p class="card-text">Description of the category.</p>
+                      <a href="#" class="btn btn-primary">View Products</a>
+                  </div>
+              </div>
           </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <div class="card">
-          <img src="/media/Mens_Silver_Claddagh_Ring_large.jpg" class="card-img-top" alt="Claddagh Ring Catergory">
-          <div class="card-body">
-            <h5 class="card-title">Claddagh Ring</h5>
-            <p class="card-text">All Claddagh Rings</p>
-            <a href="#" class="btn btn-primary">View Products</a>
+          <div class="col-lg-3 col-md-6">
+              <div class="card">
+                  <div class="card-body">
+                      <img src="/media/Mens_Silver_Claddagh_Ring_large.jpg" class="card-img-top" alt="Claddagh Ring Category">
+                      <h5 class="card-title">Claddagh Ring</h5>
+                      <p class="card-text">All Claddagh Rings</p>
+                      <a href="#" class="btn btn-primary">View Products</a>
+                  </div>
+              </div>
           </div>
-        </div>
+          <!-- Add more Category Cards as needed -->
       </div>
-      <div class="col-lg-3 col-md-6">
-        <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
-          <div class="card-body">
-            <h5 class="card-title">Category Name</h5>
-            <p class="card-text">Description of the category.</p>
-            <a href="#" class="btn btn-primary">View Products</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6">
-        <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
-          <div class="card-body">
-            <h5 class="card-title">Category Name</h5>
-            <p class="card-text">Description of the category.</p>
-            <a href="#" class="btn btn-primary">View Products</a>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
   
 
