--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,16 +21,15 @@
 </section>
 
   <!-- Catergories -->
-    <!-- Categories -->
     <section class="container my-5">
       <h2 class="text-center">Product Categories</h2>
       <div class="row">
           <div class="col-lg-3 col-md-6">
               <div class="card">
-                  <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+                  <img src="/media/Pewter_Celtic_Cross_1024x1024.jpg" class="card-img-top" alt="Category Image Celtic Cross">
                   <div class="card-body">
-                      <h5 class="card-title">Category Name</h5>
-                      <p class="card-text">Description of the category.</p>
+                      <h5 class="card-title">Celtic Crosses</h5>
+                      <p class="card-text"> All Celtic Crosses.</p>
                       <a href="#" class="btn btn-primary">View Products</a>
                   </div>
               </div>
@@ -38,14 +37,34 @@
           <div class="col-lg-3 col-md-6">
               <div class="card">
                   <div class="card-body">
-                      <img src="/media/Mens_Silver_Claddagh_Ring_large.jpg" class="card-img-top" alt="Claddagh Ring Category">
+                      <img src="/media/Emerald_Claddagh_Ring_1024x1024.jpg" class="card-img-top" alt="Category Image Claddagh Ring Category">
                       <h5 class="card-title">Claddagh Ring</h5>
                       <p class="card-text">All Claddagh Rings</p>
                       <a href="#" class="btn btn-primary">View Products</a>
                   </div>
               </div>
           </div>
-          <!-- Add more Category Cards as needed -->
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <img src="/media/14KT_Gold_Trinity_Stud_Earrings.jpg" class="card-img-top" alt="Category Image Celtic Earrings">
+              <div class="card-body">
+                <h5 class="card-title">Celtic Earrings</h5>
+                <p class="card-text">All Celtic Earrings.</p>
+                <a href="#" class="btn btn-primary">View Products</a>
+              </div>
+            </div>
+          </div>  
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <img src="/media/Shamrock_Brooch_large.jpg" class="card-img-top" alt="Category Image Brooches">
+              <div class="card-body">
+                <h5 class="card-title">Brooches</h5>
+                <p class="card-text">Irish Brooches</p>
+                <a href="#" class="btn btn-primary">View Products</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
   </section>
   
@@ -56,40 +75,40 @@
     <div class="row">
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <img src="/media/Shamrock_Bangle.jpg" class="card-img-top" alt="Shamrock Bangle">
           <div class="card-body">
-            <h5 class="card-title">Featured Products</h5>
-            <p class="card-text">Description of the category.</p>
+            <h5 class="card-title">Shamrock_Bangle</h5>
+            <p class="card-text">Silver Shamrock Bangle</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <img src="/media/Trinity_Brooch.jpg" class="card-img-top" alt="Trinity Brooch">
           <div class="card-body">
-            <h5 class="card-title">Featured Products</h5>
-            <p class="card-text">Description of the category.</p>
+            <h5 class="card-title">Trinity Brooch/h5>
+            <p class="card-text">Silver Trinity Brooch.</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <img src="/media/Celtic_Cross.jpg" class="card-img-top" alt="Celtic Cross Necklace">
           <div class="card-body">
-            <h5 class="card-title">Featured Products</h5>
-            <p class="card-text">Description of the category.</p>
+            <h5 class="card-title">Celtic Cross Necklace</h5>
+            <p class="card-text">18CT Gold Celtic Cross Pendant</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
         </div>
-      </div>
+      </div>  
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="path_to_category_image" class="card-img-top" alt="Category Image">
+          <img src="/media/Marble_Claddagh_Earrings.jpg" class="card-img-top" alt="Celtic Marble Earrings">
           <div class="card-body">
-            <h5 class="card-title">Featured Products</h5>
-            <p class="card-text">Description of the category.</p>
+            <h5 class="card-title">Silver Marble Earrings</h5>
+            <p class="card-text">Connemara Marble Celtic Earrings</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
         </div>
