--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,6 +66,10 @@ body {
     border: 1px solid black !important;
 }
 
+.bg-black {
+    background: #494932 !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
