--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,17 @@
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Products
+              </a>
+              <!-- Dropdown menu with product categories -->
+              <div class="dropdown-menu" aria-labelledby="productsDropdown">
+                <a class="dropdown-item" href="#">Catergories</a>
+                <a class="dropdown-item" href="#">Price</a>
+                <a class="dropdown-item" href="#">Rating</a>
+                <a class="dropdown-item" href="#">All Products</a>
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -110,6 +119,11 @@
             </div>
         </div>
       </nav>
+      <div id="delivery-banner" class="row text-center">
+            <div class="col bg-black text-white">
+                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+            </div>            
+        </div>
     </header>
 
     {% if messages %}
