--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,7 +16,7 @@
   <div class="container text-center">
       <h1>Emerald Isle Jewelry</h1>
       <p>Made with love in Ireland</p>
-      <a class="btn btn-primary" href="#" role="button">Shop Now</a>
+      <a class="btn btn-primary" href="{% url 'products' %}" role="button">Shop Now</a>
   </div>
 </section>
 
