--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <a class="dropdown-item" href="#">Catergories</a>
                 <a class="dropdown-item" href="#">Price</a>
                 <a class="dropdown-item" href="#">Rating</a>
-                <a class="dropdown-item" href="#">All Products</a>
+                <a class="dropdown-item" href="{% url 'products' %}">All Products</a>
               </div>
             </li>
             <li class="nav-item">
