--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <title>Emerald Isle Jewelry {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid px-0 fixed-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{% url 'home' %}">Emerald Isle Jewelry</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
