sort products by catergories and add functionality to sort by links

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -40,7 +40,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Celtic Crosses</h5>
                       <p class="card-text"> All Celtic Crosses.</p>
-                      <a href="#" class="btn btn-primary">View Products</a>
+                      <a href="{% url 'products' %}?category=pendants" class="btn btn-primary">View Products</a>
                   </div>
               </div>
           </div>
@@ -50,7 +50,7 @@
                       <img src="/media/Emerald_Claddagh_Ring_1024x1024.jpg" class="card-img-top" alt="Category Image Claddagh Ring Category">
                       <h5 class="card-title">Claddagh Ring</h5>
                       <p class="card-text">All Claddagh Rings</p>
-                      <a href="#" class="btn btn-primary">View Products</a>
+                      <a href="{% url 'products' %}?category=claddagh_rings" class="btn btn-primary">View Products</a>
                   </div>
               </div>
           </div>
@@ -60,7 +60,7 @@
               <div class="card-body">
                 <h5 class="card-title">Celtic Earrings</h5>
                 <p class="card-text">All Celtic Earrings.</p>
-                <a href="#" class="btn btn-primary">View Products</a>
+                <a href="{% url 'products' %}?category=earrings" class="btn btn-primary">View Products</a>
               </div>
             </div>
           </div>  
@@ -70,7 +70,7 @@
               <div class="card-body">
                 <h5 class="card-title">Brooches</h5>
                 <p class="card-text">Irish Brooches</p>
-                <a href="#" class="btn btn-primary">View Products</a>
+                <a href="{% url 'products' %}?category=celtic-brooches" class="btn btn-primary">View Products</a>
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
         <div class="card">
           <img src="/media/Shamrock_Bangle.jpg" class="card-img-top" alt="Shamrock Bangle">
           <div class="card-body">
-            <h5 class="card-title">Shamrock_Bangle</h5>
+            <h5 class="card-title">Shamrock Bangle</h5>
             <p class="card-text">Silver Shamrock Bangle</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
@@ -97,7 +97,7 @@
         <div class="card">
           <img src="/media/Trinity_Brooch.jpg" class="card-img-top" alt="Trinity Brooch">
           <div class="card-body">
-            <h5 class="card-title">Trinity Brooch/h5>
+            <h5 class="card-title">Trinity Brooch</h5>
             <p class="card-text">Silver Trinity Brooch.</p>
             <a href="#" class="btn btn-primary">View Products</a>
           </div>
