--- a/static/css/base.css
+++ b/static/css/base.css
@@ -91,6 +91,19 @@ body {
 	background: #ebf3eb;
 	z-index: -1;
 }
+
+.btn-outline-black {
+  background: white;
+  color: black !important; /* use important to override link colors for <a> elements */
+  border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+  background: black;
+  color: white !important;
+}
   
 
 /* -------------------------------- Media Queries */
