--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,7 +36,7 @@
       <div class="row">
           <div class="col-lg-3 col-md-6">
               <div class="card">
-                  <img src="/media/Pewter_Celtic_Cross_1024x1024.jpg" class="card-img-top" alt="Category Image Celtic Cross">
+                  <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Pewter_Celtic_Cross_1024x1024.jpg" class="card-img-top" alt="Category Image Celtic Cross">
                   <div class="card-body">
                       <h5 class="card-title">Celtic Crosses</h5>
                       <p class="card-text"> All Celtic Crosses.</p>
