--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -47,7 +47,7 @@
           <div class="col-lg-3 col-md-6">
               <div class="card">
                   <div class="card-body">
-                      <img src="/media/Emerald_Claddagh_Ring_1024x1024.jpg" class="card-img-top" alt="Category Image Claddagh Ring Category">
+                      <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Emerald_Claddagh_Ring_1024x1024.jpg" class="card-img-top" alt="Category Image Claddagh Ring Category">
                       <h5 class="card-title">Claddagh Ring</h5>
                       <p class="card-text">All Claddagh Rings</p>
                       <a href="{% url 'products' %}?category=claddagh_rings" class="btn btn-primary">View Products</a>
@@ -56,7 +56,7 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="card">
-              <img src="/media/14KT_Gold_Trinity_Stud_Earrings.jpg" class="card-img-top" alt="Category Image Celtic Earrings">
+              <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/14KT_Gold_Trinity_Stud_Earrings.jpg" class="card-img-top" alt="Category Image Celtic Earrings">
               <div class="card-body">
                 <h5 class="card-title">Celtic Earrings</h5>
                 <p class="card-text">All Celtic Earrings.</p>
@@ -66,7 +66,7 @@
           </div>  
           <div class="col-lg-3 col-md-6">
             <div class="card">
-              <img src="/media/Shamrock_Brooch_large.jpg" class="card-img-top" alt="Category Image Brooches">
+              <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Shamrock_Brooch_large.jpg" class="card-img-top" alt="Category Image Brooches">
               <div class="card-body">
                 <h5 class="card-title">Brooches</h5>
                 <p class="card-text">Irish Brooches</p>
@@ -85,7 +85,7 @@
     <div class="row">
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="/media/Shamrock_Bangle.jpg" class="card-img-top" alt="Shamrock Bangle">
+          <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Shamrock_Bangle.jpg" class="card-img-top" alt="Shamrock Bangle">
           <div class="card-body">
             <h5 class="card-title">Shamrock Bangle</h5>
             <p class="card-text">Silver Shamrock Bangle</p>
@@ -95,7 +95,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="/media/Trinity_Brooch.jpg" class="card-img-top" alt="Trinity Brooch">
+          <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Trinity_Brooch.jpg" class="card-img-top" alt="Trinity Brooch">
           <div class="card-body">
             <h5 class="card-title">Trinity Brooch</h5>
             <p class="card-text">Silver Trinity Brooch.</p>
@@ -105,7 +105,7 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="/media/Celtic_Cross.jpg" class="card-img-top" alt="Celtic Cross Necklace">
+          <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Celtic_Cross.jpg" class="card-img-top" alt="Celtic Cross Necklace">
           <div class="card-body">
             <h5 class="card-title">Celtic Cross Necklace</h5>
             <p class="card-text">18CT Gold Celtic Cross Pendant</p>
@@ -115,7 +115,7 @@
       </div>  
       <div class="col-lg-3 col-md-6">
         <div class="card">
-          <img src="/media/Marble_Claddagh_Earrings.jpg" class="card-img-top" alt="Celtic Marble Earrings">
+          <img src="https://emeraldislejewelry.s3.eu-west-1.amazonaws.com/media/Marble_Claddagh_Earrings.jpg" class="card-img-top" alt="Celtic Marble Earrings">
           <div class="card-body">
             <h5 class="card-title">Silver Marble Earrings</h5>
             <p class="card-text">Connemara Marble Celtic Earrings</p>
