--- a/templates/base.html
+++ b/templates/base.html
@@ -161,8 +161,8 @@
     {% endblock %}
 
 <!-- Site footer -->
-<footer class="bg-dark text-light py-4">
-    <div class="container">
+<footer class="container-fluid px-0 fixed-bottom">
+    <div class="bg-dark text-light py-4">
         <div class="row">
             <div class="col-md-6">
                 <p>This is the footer of the website.</p>
