--- a/templates/base.html
+++ b/templates/base.html
@@ -160,31 +160,24 @@
     {% block content %}
     {% endblock %}
 
-<!-- Site footer -->
-<footer class="container-fluid px-0 fixed-bottom">
-    <div class="bg-dark text-light py-4">
-        <div class="row">
-            <div class="col-md-6">
-                <p>This is the footer of the website.</p>
-            </div>
-            <div class="col-md-6">
-                <ul class="list-inline text-right">
-                    <!-- Font Awesome social media icons -->
-                    <li class="list-inline-item">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Emerald Isle Jewelry 2023</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-icons">
+                        <!-- Font Awesome social media icons -->
                         <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
                         <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
                         <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <!-- Add more social media icons as needed -->
-                </ul>
+                        <!-- Add more social media icons as needed -->
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</footer>    
+    </footer>    
 
     {% block postloadjs %}
     <script type="text/javascript">
