--- a/templates/base.html
+++ b/templates/base.html
@@ -159,30 +159,21 @@
 
     {% block content %}
     {% endblock %}
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p>Emerald Isle Jewelry 2023</p>
-                </div>
-                <div class="col-md-6">
-                    <div class="social-icons">
-                        <!-- Font Awesome social media icons -->
-                        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <!-- Add more social media icons as needed -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>    
-
+   
     {% block postloadjs %}
     <script type="text/javascript">
       $('.toast').toast('show');
   </script>
     {% endblock %}
+
+    <footer class="footer mt-auto py-3 dark-bg">
+        <p class="m-0 text-center text-white">Emerald Isle Jewelry</p>
+        <p class="m-0 text-center text-white">Follow us:
+        <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-square ms-3"></i></a>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-twitter-square ms-3"></i></a>
+        <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram-square ms-3"></i></a>
+        <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube"><i class="fab fa-youtube-square ms-3"></i></a>
+        </p>
+    </footer>
   </body>
 </html>
