--- a/static/css/base.css
+++ b/static/css/base.css
@@ -145,18 +145,20 @@ footer {
   border-radius: 0;
 }
 
-
-
-/* Center the social media links */
-.social-icons {
+ /* Style social media icons */
+ .social-icons {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-  color: #fff;
 }
 
 .social-icons a {
+  color: #fff; /* Change the icon color */
+  font-size: 24px;
   margin: 0 10px; /* Add some spacing between the social icons */
 }
   
