Fix 404 view and resrtyle social icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -168,12 +168,14 @@
 
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Emerald Isle Jewelry 2023</p>
+        <ul class="social-icons d-flex">
         <p class="m-0 text-center text-white">Follow us:
         <a class="social-icons" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-square ms-3"></i></a>
         <a class="social-icons" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fab fa-twitter-square ms-3"></i></a>
         <a class="social-icons" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram-square ms-3"></i></a>
         <a class="social-icons" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube"><i class="fab fa-youtube-square ms-3"></i></a>
         </p>
+        </ul>
     </footer>
   </body>
 </html>
