--- a/static/css/base.css
+++ b/static/css/base.css
@@ -161,6 +161,7 @@ footer {
   color: #fff; /* Change the icon color */
   font-size: 24px;
   margin: 0 10px; /* Add some spacing between the social icons */
+  display: inline-block;
 }
   
 
