--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
               <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
             </li>
           </ul>
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
