--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -3,10 +3,28 @@
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
+<div class="container mt-5">
+  <h1>Contact Us</h1>
+  <form method="post">
+      {% csrf_token %}
+      <div class="form-group">
+          <label for="{{ form.name.id_for_label }}">Name:</label>
+          {{ form.name }}
+      </div>
+      <div class="form-group">
+          <label for="{{ form.email.id_for_label }}">Email:</label>
+          {{ form.email }}
+      </div>
+      <div class="form-group">
+          <label for="{{ form.subject.id_for_label }}">Subject:</label>
+          {{ form.subject }}
+      </div>
+      <div class="form-group">
+          <label for="{{ form.message.id_for_label }}">Message:</label>
+          {{ form.message }}
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+</div>
   
 {% endblock %}
