--- a/contact/templates/contact/contact_success.html
+++ b/contact/templates/contact/contact_success.html
@@ -12,8 +12,11 @@
 {% block content %}
 
 <h2>Your form has been submitted. We will be in touch.</h2>
-<h4>
-    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-</h4>
+
+<div class="my-5">
+    <h4>
+        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+    </h4>
+</div>
 
 {% endblock %}
