--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -9,16 +9,11 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+                <h1 class="display-4 logo-font text-white">
                     The page you are looking for isn't available
                 </h1>
                 <div class="my-5">
-                    <h4>
-                        <a href="{% url 'products' %}" 
-                            class="shop-now-button rounded-0 text-uppercase py-3">
-                                Return to shop
-                        </a>
-                    </h4>
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                 </div>
             </div>
         </div>
