--- a/contact/templates/contact/contact_success.html
+++ b/contact/templates/contact/contact_success.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-white">
+                Thank you for reaching out. We will be in touch.
+            </h1>
+            <div class="my-5">
+                <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+            </div>
         </div>
     </div>
-{% endblock %}
-
-{% block content %}
-
-<h2>Your form has been submitted. We will be in touch.</h2>
-
-<div class="my-5">
-    <h4>
-        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-    </h4>
 </div>
 
 {% endblock %}
