--- a/contact/templates/contact/contact_success.html
+++ b/contact/templates/contact/contact_success.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block content %}
+
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
