Add producs links to featured products

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -89,7 +89,7 @@
           <div class="card-body">
             <h5 class="card-title">Shamrock Bangle</h5>
             <p class="card-text">Silver Shamrock Bangle</p>
-            <a href="#" class="btn btn-primary">View Products</a>
+            <a href="https://emerald-isle-jewelry-af11dcd57db0.herokuapp.com/products/12/" class="btn btn-primary">View Product</a>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
           <div class="card-body">
             <h5 class="card-title">Trinity Brooch</h5>
             <p class="card-text">Silver Trinity Brooch.</p>
-            <a href="#" class="btn btn-primary">View Products</a>
+            <a href="https://emerald-isle-jewelry-af11dcd57db0.herokuapp.com/products/4/" class="btn btn-primary">View Product</a>
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
           <div class="card-body">
             <h5 class="card-title">Celtic Cross Necklace</h5>
             <p class="card-text">18CT Gold Celtic Cross Pendant</p>
-            <a href="#" class="btn btn-primary">View Products</a>
+            <a href="https://emerald-isle-jewelry-af11dcd57db0.herokuapp.com/products/6/" class="btn btn-primary">View Product</a>
           </div>
         </div>
       </div>  
@@ -119,7 +119,7 @@
           <div class="card-body">
             <h5 class="card-title">Silver Marble Earrings</h5>
             <p class="card-text">Connemara Marble Celtic Earrings</p>
-            <a href="#" class="btn btn-primary">View Products</a>
+            <a href="https://emerald-isle-jewelry-af11dcd57db0.herokuapp.com/products/11/" class="btn btn-primary">View Product</a>
           </div>
         </div>
       </div>
