--- a/static/css/base.css
+++ b/static/css/base.css
@@ -148,7 +148,7 @@ footer {
  .social-icons {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -159,7 +159,7 @@ footer {
 .social-icons a {
   color: #fff; /* Change the icon color */
   font-size: 24px;
-  margin: 0 10px; /* Add some spacing between the social icons */
+  margin: 10px; /* Add some spacing between the social icons */
 }
   
 
