--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -23,27 +23,36 @@
 
     <form method="post">
         {% csrf_token %}
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="{{ form.name.id_for_label }}">Name:</label>
-                {{ form.name }}
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="{{ form.name.id_for_label }}">Name:</label>
+                    {{ form.name }}
+                </div>
             </div>
-            <div class="form-group col-md-6">
-                <label for="{{ form.email.id_for_label }}">Email:</label>
-                {{ form.email }}
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="{{ form.email.id_for_label }}">Email:</label>
+                    {{ form.email }}
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="{{ form.subject.id_for_label }}">Subject:</label>
-            {{ form.subject }}
-        </div>
-        <div class="form-group">
-            <label for="{{ form.message.id_for_label }}">Message:</label>
-            {{ form.message }}
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="{{ form.subject.id_for_label }}">Subject:</label>
+                    {{ form.subject }}
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="{{ form.message.id_for_label }}">Message:</label>
+                    {{ form.message }}
+                </div>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
 
-  
+
+
 {% endblock %}
