--- a/static/css/base.css
+++ b/static/css/base.css
@@ -328,6 +328,10 @@ color: #fff;
 color: #17a2b8; /* text-info */
 }
 
+/* Mail Chimp */
+#mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
+    
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
   .fixed-top-desktop-only {
