Added styling to signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -170,16 +170,26 @@
     {% endblock %}
 
     <footer class="footer mt-auto py-3 dark-bg">
-        <div class="container">
-        <div class="row justify-content-start">   
-            <div class="col-lg-8"> 
-            <p class="m-0 text-center text-white" style="display: flex; justify-content: right;">
-                Follow us:
-                <a class="social-icons" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-square ms-3"></i></a>
-            </p>
-        </div>
+        
+        <div class="row pb-0 no-gutters">
+
+            <div class="col-md-4 text-center p-2 order-3 order-md-1">
+    
+                <h3 class="text-uppercase sub-heading mt-3">Find Us On</h3>
+    
+                <ul class="list-inline my-3 mt-sm-2">
+    
+                    <li class="list-inline-item social-icon">
+                        <a href="#" aria-label="Check out our facebook page" rel="noopener nofollow" target="_blank">
+                            <i class="fa-brands fa-square-facebook fa-lg text-light"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+    
+                </ul>
+    
             </div>
-        </div>
+        
         <div class="container">
         <div class="row justify-content-start"> <!-- Use justify-content-start to align to the left -->
             <div class="col-lg-4">
@@ -221,8 +231,8 @@
         </div>
     </div>
     <div>
-        <p class="m-0 text-center text-white">Emerald Isle Jewelry 2023</p>
     </div>
+    <p class="m-0 text-center text-white">Emerald Isle Jewelry 2023</p>
     </footer>
     
   </body>
