Redid full footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -170,70 +170,29 @@
     {% endblock %}
 
     <footer class="footer mt-auto py-3 dark-bg">
-        
-        <div class="row pb-0 no-gutters">
-
-            <div class="col-md-4 text-center p-2 order-3 order-md-1">
-    
-                <h3 class="text-uppercase sub-heading mt-3">Find Us On</h3>
-    
-                <ul class="list-inline my-3 mt-sm-2">
-    
-                    <li class="list-inline-item social-icon">
-                        <a href="#" aria-label="Check out our facebook page" rel="noopener nofollow" target="_blank">
-                            <i class="fa-brands fa-square-facebook fa-lg text-light"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-    
-                </ul>
-    
-            </div>
-        
         <div class="container">
-        <div class="row justify-content-start"> <!-- Use justify-content-start to align to the left -->
-            <div class="col-lg-4">
-                <div id="mc_embed_shell">
-                    <div id="mc_embed_signup">
-                        <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c6e6026089b9ba38b17c7b651&amp;id=3df5b95a1c&amp;f_id=009f60e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                            <div id="mc_embed_signup_scroll">
-                                <h2>Subscribe</h2>
-                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                                <div class="mc-field-group">
-                                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-                                    <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
-                                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-                                </div>
-                                <div id="mce-responses" class="clear foot">
-                                    <div class="response" id="mce-error-response" style="display: none;"></div>
-                                    <div class="response" id="mce-success-response" style="display: none;"></div>
-                                </div>
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                    <input type="text" name="b_c6e6026089b9ba38b17c7b651_3df5b95a1c" tabindex="-1" value="">
-                                </div>
-                                <div class="optionalParent">
-                                    <div class="clear foot">
-                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                                        <p style="margin: 0px auto;">
-                                            <a href="http://eepurl.com/ixgIks" title="Mailchimp - email marketing made easy and fun">
-                                                <span style="display: inline-block; background-color: transparent; border-radius: 4px;">
-                                                    <img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;">
-                                                </span>
-                                            </a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-md-4">
+              <!-- MailChimp Signup Form -->
+              <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c6e6026089b9ba38b17c7b651&amp;id=3df5b95a1c&amp;f_id=009f60e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" method="post" class="form-inline">
+                <label for="email" class="sr-only">Email</label>
+                <input type="email" name="EMAIL" class="form-control mr-2" placeholder="Enter your email" required>
+                <button type="submit" class="btn btn-primary">Subscribe</button>
+              </form>
             </div>
+            <div class="col-md-4 text-center">
+              <!-- Name of Your Site -->
+              <h5>Emerald Isle Jewelry 2023</h5>
+            </div>
+            <div class="col-md-4 text-right">
+              <!-- Font Awesome Icon Link -->
+              <a href="#" target="_blank">
+                <i class="fab fa-facebook-square fa-2x"></i>
+              </a>
+            </div>
+          </div>
         </div>
-    </div>
-    <div>
-    </div>
-    <p class="m-0 text-center text-white">Emerald Isle Jewelry 2023</p>
-    </footer>
+      </footer>   
     
   </body>
 </html>
