Add stling to facebook icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -177,7 +177,7 @@
               <form action="https://gmail.us21.list-manage.com/subscribe/post?u=c6e6026089b9ba38b17c7b651&amp;id=3df5b95a1c&amp;f_id=009f60e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" method="post" class="form-inline">
                 <label for="email" class="sr-only">Email</label>
                 <input type="email" name="EMAIL" class="form-control mr-2" placeholder="Enter your email" required>
-                <button type="submit" class="btn btn-primary">Subscribe</button>
+                <button type="submit" class="btn-primary">Subscribe</button>
               </form>
             </div>
             <div class="col-md-4 text-center">
@@ -185,14 +185,15 @@
               <h5>Emerald Isle Jewelry 2023</h5>
             </div>
             <div class="col-md-4 text-right">
+                <p>Find US:</p>
               <!-- Font Awesome Icon Link -->
               <a href="#" target="_blank">
-                <i class="fab fa-facebook-square fa-2x"></i>
+                <i class="social-icons fab fa-facebook-square fa-2x"></i>
               </a>
             </div>
           </div>
         </div>
-      </footer>   
+      </footer>      
     
   </body>
 </html>
