Add css for testimonial pages

--- a/testomonial/templates/testomonial/add_testimonial.html
+++ b/testomonial/templates/testomonial/add_testimonial.html
@@ -13,10 +13,12 @@
 
 {% block content %}
 
+<div class="overlay">
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Submit</button>
 </form>
+<div>
 
 {% endblock %}
